--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
   "dependencies": {
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
-    "handlebars": "^4.7.6",
+    "express-handlebars": "^5.2.0",
     "mongoose": "^5.11.13"
   }
 }
